tests/errors/runtime/001.run
[1m[0;31mruntime error: [0mtests/errors/runtime/001.ura:6: Division by zero
exit: 1
